src/objects/MUSW__OAuth_Properties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>MUSW__Access_Expires__c</fullName>
        <description>Stores the Access Token expiry date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Email__c</fullName>
        <description>Email address to use in the event of an error in the Bluebeam OAuth process</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email address to use in the event of an error in the Bluebeam OAuth process</inlineHelpText>
        <label>Alert Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MUSW__Apex_Job_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Authentication_URL__c</fullName>
        <description>The URL Endpoint to request an Authentication token from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Authentication URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MUSW__Base_URL__c</fullName>
        <description>The default return point for the Authentication flow to return to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Base URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MUSW__Bluebeam_User_Email__c</fullName>
        <description>Email on User&apos;s Bluebeam Account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bluebeam User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MUSW__Client_Id__c</fullName>
        <description>The Client Id which selects the Bluebeam App to use</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Client_Secret__c</fullName>
        <description>The client secret to use to turn an refresh or code token into an access token</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Secret</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Encrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the values in Client Secret, Refresh Token and PARTxx are encrypted, the app will default to encrypted state.</description>
        <label>Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__IsRefreshingAccessToken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refreshing Access Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Part01__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Token 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Part02__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Token 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Part03__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Token 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Redirect_URL__c</fullName>
        <description>The base url for the API calls to the OAuth endpoint</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Redirect URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MUSW__Refresh_Expires__c</fullName>
        <description>The date the refresh token expires</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Refresh Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Refresh_Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Refresh Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>OAuth Properties</label>
</CustomObject>